[package]
name = "toy-payment-engine"
version = "0.1.0"
authors = ["Karthik Ravikanti <karthik.ravikanti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
rust_decimal = "1.8.1"
serde = { version = "1.0.117", features = ["derive"] }
